feat:增加菜单管理的5个接口显示
